# git-hook-installer

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: cargo_repo.rs  cli.rs  git_repo.rs  hooks.rs  installer.rs  main.rs  status.rs  util.rs
src/hooks/: fs.rs  managed_block.rs  script.rs  snapshots.rs  types.rs
src/installer/: detect.rs  prompts.rs
