[package]
name = "git-hook-installer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Install basic premade git hooks into the current repository."

[[bin]]
name = "git-hook-installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.28", features = ["derive"] }
dialoguer = "0.11.0"

[dev-dependencies]
tempfile = "3.10.1"
