[package]
name = "git-hook-installer"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Install basic premade git hooks into the current repository."
repository = "https://github.com/pRizz/git-hook-installer"
homepage = "https://github.com/pRizz/git-hook-installer"
documentation = "https://docs.rs/git-hook-installer"
keywords = ["git", "hooks", "cli", "cargo", "pre-commit", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-hook-installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.28", features = ["derive"] }
dialoguer = "0.11.0"

[dev-dependencies]
tempfile = "3.10.1"
