[package]
name = "git-hook-installer"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Install basic premade git hooks into the current repository."
repository = "https://github.com/pRizz/git-hook-installer"
homepage = "https://github.com/pRizz/git-hook-installer"
documentation = "https://docs.rs/git-hook-installer"
keywords = ["git", "hooks", "cli", "pre-commit"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-hook-installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.28", features = ["derive"] }
dialoguer = "0.11.0"
time = { version = "0.3.37", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.10.1"
